syntax = "proto3";

option go_package = "pkg/doggo/pb";

service DoggoService {
    rpc GetById (GetByIdRequest) returns (Doggo);
}

message Doggo {
    int32 id = 1;
    string name = 2;
    string breed = 3;
    bool isGood = 4;
}

message GetByIdRequest {
    int32 id = 1;
}